--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "tailwindcss": "^3.4.6",
     "web-vitals": "^2.1.4"
   },
